--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
     //}
 }
 
-<h3>Name: @ViewBag.userData.name</h3>
+<h3>@ViewBag.userData.name in @ViewBag.test1[0]</h3>
 
 <table class="table">
     <tr><th>Category</th><th>Your Info</th><th>Others Like You</th><th>Percentile You're In</th></tr>
@@ -174,12 +174,14 @@
                 <li>@ViewBag.EducationSuggestion</li>
                 <li>@ViewBag.HousingSuggestion</li>
                 <li>@ViewBag.KidsSuggestion</li>
+                <li>@ViewBag.StateSuggestion1</li>
+                <li>@ViewBag.StateSuggestion2</li>
             </ol>
         </td>
     </tr>
 </table>
 <br />
-<form action="/Home/NewState">
+<form action="/Home/NewIncome">
     <label>Change your state?</label>    <select name="stateid">
         <option value="01" name="stateid">Alabama</option>
         <option value="02" name="stateid">Alaska</option>
@@ -232,31 +234,27 @@
         <option value="55" name="stateid">Wisconsin</option>
         <option value="56" name="stateid">Wyoming</option>
     </select>
-    <input type="submit" value="Change!" />
-</form>
-
-<form action="/Home/NewIncome">
-    <label>Change your Income?</label>   
+    <label>Change your Income?</label>
     <select name="incomerange">
         <option name="incomerange" value="DP03_0052E"> Less than $10K
-        
-        <option name="incomerange"  value="DP03_0053E"> $10,000-$14,999
-        
-        <option name="incomerange"  value="DP03_0054E"> $15,000-$24,999
-        
-        <option name="incomerange"  value="DP03_0055E"> $25,000-$34,999
-        
-        <option name="incomerange"  value="DP03_0056E" checked> $35,000-$49,999
-        
-        <option name="incomerange"  value="DP03_0057E"> $50,000-$74,999
-        
-        <option name="incomerange"  value="DP03_0058E"> $75,000-$99,999
-        
-        <option name="incomerange"  value="DP03_0059E"> $100,000-$149,999
-        
-        <option name="incomerange"  value="DP03_0060E"> $150,000-$199,999
-        
-        <option name="incomerange"  value="DP03_0061E"> More than $200K +
+
+        <option name="incomerange" value="DP03_0053E"> $10,000-$14,999
+
+        <option name="incomerange" value="DP03_0054E"> $15,000-$24,999
+
+        <option name="incomerange" value="DP03_0055E"> $25,000-$34,999
+
+        <option name="incomerange" value="DP03_0056E" checked> $35,000-$49,999
+
+        <option name="incomerange" value="DP03_0057E"> $50,000-$74,999
+
+        <option name="incomerange" value="DP03_0058E"> $75,000-$99,999
+
+        <option name="incomerange" value="DP03_0059E"> $100,000-$149,999
+
+        <option name="incomerange" value="DP03_0060E"> $150,000-$199,999
+
+        <option name="incomerange" value="DP03_0061E"> More than $200K +
     </select>
     <input type="submit" value="Change!" />
 </form>
