--- a/FinalProject/Views/Home/frontendtemp.cshtml
+++ b/FinalProject/Views/Home/frontendtemp.cshtml
@@ -21,7 +21,7 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
         }
 </style>
 <div class="container-fluid modal-body" style="position: fixed;width: 100%;height: 100%;left: 0;top: 30%;z-index: 10;">
-    <h1 class="text-center" style="font-size:60px;color:white;">Take The Survey!</h1>
+    <h1 class="text-center" style="font-size:60px;color:white; padding-left:3%;">Take The Survey!</h1>
     <br/>
     <p style="text-align:center;"><a href="/Home/QuestionsTemp/" class=" btn-default btn-lg" style="border:1px solid white; color: cadetblue;">Take The Survey!</a></p>
 </div>
