--- a/FinalProject/Views/Shared/_Layout.cshtml
+++ b/FinalProject/Views/Shared/_Layout.cshtml
@@ -6,9 +6,19 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <style>
+        h3{
+            text-align:center;
+        }
+        a {
+            color: #ffffff;
+            text-decoration: none;
+            text-shadow: 0.5px 0.5px 1px white, 0 0 25px white, 0 0 1px white;
+        }
+    </style>
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top" style="background-color:rgba(0,0,0,0.6); border-width:0px;" >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -16,14 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("How's My Life", "frontendtemp", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("How's My Life", "frontendtemp", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "frontendtemp", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Questions", "Questions", "Home")</li>
+                <ul class="nav navbar-nav" style="margin-left:35.5%;">
+                    @*<li>@Html.ActionLink("Home", "frontendtemp", "Home")</li>*@
+                    <li>@Html.ActionLink("About Us", "About", "Home")</li>
+                    <li><h4 style ="margin-top: 13%; color:white; text-align:center;color: #333333; font-family: Century Gothic,sans-serif; font-weight:500; ">@Html.ActionLink("How's My Life", "frontendtemp", "Home")</h4></li>
+                    <li>@Html.ActionLink("Questions", "QuestionsTemp", "Home")</li>
                     @*<li>@Html.ActionLink("Terrell", "frontendtemp", "Home")</li>*@
                 </ul>
             </div>
