Pushing last one

--- a/FinalProject/Views/Home/Contact.cshtml
+++ b/FinalProject/Views/Home/Contact.cshtml
@@ -3,8 +3,10 @@
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
-
-
+<img src="~/Views/image/Chris' face.jpg" />
+<img src="~/Views/image/Jesse's Face.jpg" />
+<img src="~/Views/image/My face.jpg" />
+<img src="~/Views/image/Will.jpg" />
 <address>
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
