--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -168,6 +168,23 @@
     <div id="IncomechartContainer" style="height: 300px; width: 100%;"></div>
 </li>
 </ul>
+@*<div class="row">
+    <div class="col-sm-4">
+        <img class="center-block" style="width:80px; height:100px;" src="https://png2.kisspng.com/20180309/qke/kisspng-old-age-download-icon-help-the-old-man-across-the-street-5aa29d192e6bc6.8517958515206064891901.png" />
+        <hr style="width:40%; border:1px solid;" />
+        <div id="AgechartContainer" style="height: 300px; width: 100%;"></div>
+    </div>
+    <div class="col-sm-4">
+        <img class="center-block" style="width:80px; height:110px;" src="http://bankhelpline.com/img/save.png" />
+        <hr style="width:40%; border:1px solid; />
+        <div id="IncomechartContainer" style="height: 300px; width: 100%;"></div>
+    </div>
+    <div class="col-sm-4">
+        <img class="center-block" style="width:80px; height:110px;" src="http://bankhelpline.com/img/save.png" />
+        <hr style="width:40%; border:1px solid;  />
+        <div id="IncomechartContainer" style="height: 300px; width: 100%;"></div>
+    </div>
+</div>*@
 <br />
 @*<ul>
         <li>Total Male: @ViewBag.test1[1]</li>
