--- a/FinalProject/Views/Home/About.cshtml
+++ b/FinalProject/Views/Home/About.cshtml
@@ -5,3 +5,21 @@
 <h3>@ViewBag.Message</h3>
 
 
+<div class="row">
+    <div class="col-sm-3 text-center center-block">
+        <img src="~/Content/image/Chris' face.jpg" width="250px" height="250px" />
+        <h1>Chris</h1>
+    </div>
+    <div class="col-sm-3">
+        <img src="~/Content/image/Jesse's Face.jpg" width="250px" height="250px" />
+        <hl>Jesse Ash</hl>
+    </div>
+    <div class="col-sm-3">
+        <img src="~/Content/image/My face.jpg" width="250px" height="250px" />
+        <h1>Terrell White</h1>
+    </div>
+    <div class="col-sm-3">
+        <img src="~/Content/image/Will.jpg" width="250px" height="250px" />
+        <h1>William</h1>
+    </div>
+</div>
