--- a/FinalProject/Views/Home/About.cshtml
+++ b/FinalProject/Views/Home/About.cshtml
@@ -1,18 +1,27 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<style>
+body {  }
+    h1 {
+        color:black;
+        font-family: Georgia, 'Times New Roman', serif;
+
+        text-align: center;
+        font-weight: 100;
+    }
+</style>
+<h1>@ViewBag.Message</h1>
 
 
-<div class="row">
-    <div class="col-sm-3 text-center center-block">
+<div class="row text-center center-bloc ">
+    <div class="col-sm-3">
         <img src="~/Content/image/Chris' face.jpg" width="250px" height="250px" />
-        <h1>Chris</h1>
+        <h1>Chris Singleton</h1>
     </div>
     <div class="col-sm-3">
         <img src="~/Content/image/Jesse's Face.jpg" width="250px" height="250px" />
-        <hl>Jesse Ash</hl>
+        <h1>Jesse Ashton</h1>
     </div>
     <div class="col-sm-3">
         <img src="~/Content/image/My face.jpg" width="250px" height="250px" />
@@ -20,6 +29,6 @@
     </div>
     <div class="col-sm-3">
         <img src="~/Content/image/Will.jpg" width="250px" height="250px" />
-        <h1>William</h1>
+        <h1>William Chapman</h1>
     </div>
 </div>
