--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -69,13 +69,14 @@
                         yValueFormatString: "0.###",
                         legendText: "{indexLabel}",
                         dataPoints: [
+                            { y: @ViewBag.test1[3], indexLabel: "20 to 24 years:" },
                             { y: @ViewBag.test1[4], indexLabel: "25 to 34 years:" },
                             { y: @ViewBag.test1[5], indexLabel: "35 to 44 years:" },
                             { y: @ViewBag.test1[6], indexLabel: "45 to 54 years:" },
                             { y: @ViewBag.test1[7], indexLabel: "55 to 59 years:" },
                             { y: @ViewBag.test1[8], indexLabel: "60 to 64 years:" },
                             { y: @ViewBag.test1[9], indexLabel: "65 to 74 years:" },
-                            { y: @ViewBag.test1[10], indexLabel: "65 to 74 years:" },
+                            { y: @ViewBag.test1[10], indexLabel: "75 to 84 years:" },
                             { y: @ViewBag.test1[11], indexLabel: "85+:" },
 
                         ]
@@ -372,88 +373,29 @@
          {
              if (ViewBag.StateCodes[i] == ViewBag.UserStateCode)
              {
-                <option value="@ViewBag.StateCodes[i]" selected>@ViewBag.StateLabels[i] : @ViewBag.StateCodes[i]</option>
+                <option value="@ViewBag.StateCodes[i]" selected>@ViewBag.StateLabels[i]</option>
             }
             else
             {
-                <option value="@ViewBag.StateCodes[i]">@ViewBag.StateLabels[i] : @ViewBag.StateCodes[i]</option>
+                <option value="@ViewBag.StateCodes[i]">@ViewBag.StateLabels[i]</option>
             }
 
           }
     </select>
-    @*<label>Change your state?</label>    <select name="stateid">
-            <option value="01" name="stateid">Alabama</option>
-            <option value="02" name="stateid">Alaska</option>
-            <option value="04" name="stateid">Arizona</option>
-            <option value="05" name="stateid">Arkansas</option>
-            <option value="06" name="stateid">California</option>
-            <option value="08" name="stateid">Colorado</option>
-            <option value="09" name="stateid">Connecticut</option>
-            <option value="10" name="stateid">Delaware</option>
-            <option value="12" name="stateid">Florida</option>
-            <option value="13" name="stateid">Georgia</option>
-            <option value="15" name="stateid">Hawaii</option>
-            <option value="16" name="stateid">Idaho</option>
-            <option value="17" name="stateid">Illinois</option>
-            <option value="18" name="stateid">Indiana</option>
-            <option value="19" name="stateid">Iowa</option>
-            <option value="20" name="stateid">Kansas</option>
-            <option value="21" name="stateid">Kentucky</option>
-            <option value="22" name="stateid">Louisiana</option>
-            <option value="23" name="stateid">Maine</option>
-            <option value="24" name="stateid">Maryland</option>
-            <option value="25" name="stateid">Massachusetts</option>
-            <option value="26" name="stateid">Michigan</option>
-            <option value="27" name="stateid">Minnesota</option>
-            <option value="28" name="stateid">Mississippi</option>
-            <option value="29" name="stateid">Missouri</option>
-            <option value="30" name="stateid">Montana</option>
-            <option value="31" name="stateid">Nebraska</option>
-            <option value="32" name="stateid">Nevada</option>
-            <option value="33" name="stateid">New Hampshire</option>
-            <option value="34" name="stateid">New Jersey</option>
-            <option value="35" name="stateid">New Mexico</option>
-            <option value="36" name="stateid">New York</option>
-            <option value="37" name="stateid">North Carolina</option>
-            <option value="38" name="stateid">North Dakota</option>
-            <option value="39" name="stateid">Ohio</option>
-            <option value="40" name="stateid">Oklahoma</option>
-            <option value="41" name="stateid">Oregon</option>
-            <option value="42" name="stateid">Pennsylvania</option>
-            <option value="44" name="stateid">Rhode Island</option>
-            <option value="45" name="stateid">South Carolina</option>
-            <option value="46" name="stateid">South Dakota</option>
-            <option value="47" name="stateid">Tennessee</option>
-            <option value="48" name="stateid">Texas</option>
-            <option value="49" name="stateid">Utah</option>
-            <option value="50" name="stateid">Vermont</option>
-            <option value="51" name="stateid">Virginia</option>
-            <option value="53" name="stateid">Washington</option>
-            <option value="54" name="stateid">West Virginia</option>
-            <option value="55" name="stateid">Wisconsin</option>
-            <option value="56" name="stateid">Wyoming</option>
-        </select>*@
     <label>Change your Income?</label>
     <select name="incomerange">
-        <option name="incomerange" value="DP03_0052E"> Less than $10K
+        @for (int i = 0; i < 10; i++)
+        {
+            if (ViewBag.IncomeCodes[i] == ViewBag.UserIncomeCode)
+            {
+                <option value="@ViewBag.IncomeCodes[i]" selected>@ViewBag.IncomeLabels[i]</option>
+            }
+            else
+            {
+                <option value="@ViewBag.IncomeCodes[i]">@ViewBag.IncomeLabels[i]</option>
+            }
 
-        <option name="incomerange" value="DP03_0053E"> $10,000-$14,999
-
-        <option name="incomerange" value="DP03_0054E"> $15,000-$24,999
-
-        <option name="incomerange" value="DP03_0055E"> $25,000-$34,999
-
-        <option name="incomerange" value="DP03_0056E" checked> $35,000-$49,999
-
-        <option name="incomerange" value="DP03_0057E"> $50,000-$74,999
-
-        <option name="incomerange" value="DP03_0058E"> $75,000-$99,999
-
-        <option name="incomerange" value="DP03_0059E"> $100,000-$149,999
-
-        <option name="incomerange" value="DP03_0060E"> $150,000-$199,999
-
-        <option name="incomerange" value="DP03_0061E"> More than $200K +
+        }
     </select>
     <input type="submit" value="Change!" />
 </form>
