--- a/FinalProject/Views/Home/NewIncome.cshtml
+++ b/FinalProject/Views/Home/NewIncome.cshtml
@@ -3,6 +3,156 @@
     ViewBag.Title = "NewIncome";
 }
 <br />
+<style>
+    body {
+        overflow-x: hidden;
+    }
+
+    .w3-border {
+        height: 5%;
+        width: 50%;
+        border: 0.1px solid gray;
+    }
+
+    .w3-green {
+        background-color: green;
+    }
+
+    .w3-red {
+        background-color: red;
+    }
+
+    ul, menu, dir {
+        display: block;
+        list-style-type: disc;
+        margin-block-start: 0px;
+        margin-block-end: 0px;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        padding-inline-start: opx;
+    }
+</style>
+<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+<script type="text/javascript">
+
+    window.onload = function () {
+        var chart = new CanvasJS.Chart("SexchartContainer",
+            {
+                theme: "theme2",
+                title: {
+                    text: "Males and Females in the state of @ViewBag.test1[0]"
+                },
+                data: [
+                    {
+                        type: "pie",
+                        showInLegend: true,
+                        toolTipContent: "{y} - #percent %",
+                        yValueFormatString: "0.###",
+                        legendText: "{indexLabel}",
+                        dataPoints: [
+                            { y: @Convert.ToDouble(ViewBag.test1[1]), indexLabel: "Male" },
+                            { y: @Convert.ToDouble(ViewBag.test1[2]), indexLabel: "Female" },
+
+                        ]
+                    }
+                ]
+            });
+        chart.render();
+                var chart = new CanvasJS.Chart("AgechartContainer",
+            {
+                theme: "theme2",
+                title: {
+                    text: "Percentile of Age Groups in the state of @ViewBag.test1[0]"
+                },
+                data: [
+                    {
+                        type: "pie",
+                        showInLegend: true,
+                        toolTipContent: "{y} - #percent %",
+                        yValueFormatString: "0.###",
+                        legendText: "{indexLabel}",
+                        dataPoints: [
+                            { y: @ViewBag.test1[3], indexLabel: "20 to 24 years:" },
+                            { y: @ViewBag.test1[4], indexLabel: "25 to 34 years:" },
+                            { y: @ViewBag.test1[5], indexLabel: "35 to 44 years:" },
+                            { y: @ViewBag.test1[6], indexLabel: "45 to 54 years:" },
+                            { y: @ViewBag.test1[7], indexLabel: "55 to 59 years:" },
+                            { y: @ViewBag.test1[8], indexLabel: "60 to 64 years:" },
+                            { y: @ViewBag.test1[9], indexLabel: "65 to 74 years:" },
+                            { y: @ViewBag.test1[10], indexLabel: "75 to 84 years:" },
+                            { y: @ViewBag.test1[11], indexLabel: "85+:" },
+
+                        ]
+                    }
+                ]
+            });
+        chart.render();
+                var chart = new CanvasJS.Chart("IncomechartContainer",
+            {
+                theme: "theme2",
+                title: {
+                    text: "Income in the state of @ViewBag.test1[0]"
+                },
+                data: [
+                    {
+                        type: "pie",
+                        showInLegend: true,
+                        toolTipContent: "{y} - #percent %",
+                        yValueFormatString: "0.###",
+                        legendText: "{indexLabel}",
+                        dataPoints: [
+                            { y: @ViewBag.test1[12], indexLabel: "Less than $10,000" },
+                            { y: @ViewBag.test1[13], indexLabel: "$10,000 to $14,999" },
+                            { y: @ViewBag.test1[14], indexLabel: "$15,000 to $24,999" },
+                            { y: @ViewBag.test1[15], indexLabel: "$25,000 to $34,999" },
+                            { y: @ViewBag.test1[16], indexLabel: "$35,000 to 49,999" },
+                            { y: @ViewBag.test1[17], indexLabel: "$50,000 to $74,999" },
+                            { y: @ViewBag.test1[18], indexLabel: "$75,000 to $99,999" },
+                            { y: @ViewBag.test1[19], indexLabel: "$100,000 to $149,999" },
+                            { y: @ViewBag.test1[20], indexLabel: "$150,000 to $199,999" },
+                            { y: @ViewBag.test1[21], indexLabel: "$200,000 +" },
+                        ]
+                    }
+                ]
+            });
+        chart.render();
+        var chart = new CanvasJS.Chart("chartContainer1", {
+            animationEnabled: true,
+            title: {
+                text: "Number of iPhones Sold in Different Quarters"
+            },
+            axisX: {
+                minimum: new Date(2015, 01, 25),
+                maximum: new Date(2017, 02, 15),
+                valueFormatString: "MMM YY"
+            },
+            axisY: {
+                title: "Number of Sales",
+                titleFontColor: "#4F81BC",
+                suffix: "mn"
+            },
+            data: [{
+                indexLabelFontColor: "darkSlateGray",
+                name: "views",
+                type: "area",
+                yValueFormatString: "#,##0.0mn",
+                dataPoints: [
+                    { x: new Date(2015, 02, 1),/*where the data from the api can go*/ y: 74.4, label: "Michigan"/*potential way to compare the states or counties*/ },
+                    { x: new Date(2015, 05, 1), y: 61.1, label: "Q2-2015" },
+                    { x: new Date(2015, 08, 1), y: 47.0, label: "Q3-2015" },
+                    { x: new Date(2015, 11, 1), y: 48.0, label: "Q4-2015" },
+                    { x: new Date(2016, 02, 1), y: 74.8, label: "Q1-2016" },
+                    { x: new Date(2016, 05, 1), y: 51.1, label: "Q2-2016" },
+                    { x: new Date(2016, 08, 1), y: 40.4, label: "Q3-2016" },
+                    { x: new Date(2016, 11, 1), y: 45.5, label: "Q4-2016" },
+                    { x: new Date(2017, 02, 1), y: 78.3, label: "Q1-2017", indexLabel: "Highest", markerColor: "red" }
+                ]
+            }]
+        });
+        chart.render();
+    }
+</script>
+<br />
 
 @{ double oldint1 = Convert.ToDouble(ViewBag.PrevState1[1]);
     double oldint2 = Convert.ToDouble(ViewBag.PrevState1[2]);
@@ -153,6 +303,28 @@
 <br />
 @ViewBag.HousingSuggestion
 
+
+@* charts graphs *@
+<br />
+<ul class="list-inline" style="width: 2009px; padding-right:4%;">
+    <li style="width:380px; ">
+        <img class="center-block" style="width:80px; height:100px;" src="https://png2.kisspng.com/20180309/qke/kisspng-old-age-download-icon-help-the-old-man-across-the-street-5aa29d192e6bc6.8517958515206064891901.png" />
+        <hr style="width:40%; border:1px solid; @*text-align:center;*@" />
+        <div id="AgechartContainer" style="height: 300px; width: 100%;"></div>
+    </li>
+    <li style="width:380px;  ">
+        <img class="center-block" style="width:80px; height:80px;" src="https://www.shareicon.net/download/2016/07/30/804328_man_512x512.png" />
+        <hr style="width:40%; border:1px solid; @*text-align:center;*@" />
+        <div id="SexchartContainer" style="height: 300px; width: 100%;"></div>
+
+    </li>
+    <li style="width:380px; ">
+        <img class="center-block" style="width:80px; height:110px;" src="http://bankhelpline.com/img/save.png" />
+        <hr style="width:40%; border:1px solid; @*text-align:center;*@" />
+        <div id="IncomechartContainer" style="height: 300px; width: 100%;"></div>
+    </li>
+</ul>
+@* beginning of new newstate info *@
 @{ double int1 = Convert.ToDouble(ViewBag.test1[1]);
     double int2 = Convert.ToDouble(ViewBag.test1[2]);
     double int3 = Convert.ToDouble(ViewBag.test2[27]);
@@ -273,79 +445,35 @@
 <br />
 <br />
 <form action="/Home/NewIncome">
-    <label>Change your state?</label>    <select name="stateid">
-        <option value="01" name="stateid">Alabama</option>
-        <option value="02" name="stateid">Alaska</option>
-        <option value="04" name="stateid">Arizona</option>
-        <option value="05" name="stateid">Arkansas</option>
-        <option value="06" name="stateid">California</option>
-        <option value="08" name="stateid">Colorado</option>
-        <option value="09" name="stateid">Connecticut</option>
-        <option value="10" name="stateid">Delaware</option>
-        <option value="12" name="stateid">Florida</option>
-        <option value="13" name="stateid">Georgia</option>
-        <option value="15" name="stateid">Hawaii</option>
-        <option value="16" name="stateid">Idaho</option>
-        <option value="17" name="stateid">Illinois</option>
-        <option value="18" name="stateid">Indiana</option>
-        <option value="19" name="stateid">Iowa</option>
-        <option value="20" name="stateid">Kansas</option>
-        <option value="21" name="stateid">Kentucky</option>
-        <option value="22" name="stateid">Louisiana</option>
-        <option value="23" name="stateid">Maine</option>
-        <option value="24" name="stateid">Maryland</option>
-        <option value="25" name="stateid">Massachusetts</option>
-        <option value="26" name="stateid">Michigan</option>
-        <option value="27" name="stateid">Minnesota</option>
-        <option value="28" name="stateid">Mississippi</option>
-        <option value="29" name="stateid">Missouri</option>
-        <option value="30" name="stateid">Montana</option>
-        <option value="31" name="stateid">Nebraska</option>
-        <option value="32" name="stateid">Nevada</option>
-        <option value="33" name="stateid">New Hampshire</option>
-        <option value="34" name="stateid">New Jersey</option>
-        <option value="35" name="stateid">New Mexico</option>
-        <option value="36" name="stateid">New York</option>
-        <option value="37" name="stateid">North Carolina</option>
-        <option value="38" name="stateid">North Dakota</option>
-        <option value="39" name="stateid">Ohio</option>
-        <option value="40" name="stateid">Oklahoma</option>
-        <option value="41" name="stateid">Oregon</option>
-        <option value="42" name="stateid">Pennsylvania</option>
-        <option value="44" name="stateid">Rhode Island</option>
-        <option value="45" name="stateid">South Carolina</option>
-        <option value="46" name="stateid">South Dakota</option>
-        <option value="47" name="stateid">Tennessee</option>
-        <option value="48" name="stateid">Texas</option>
-        <option value="49" name="stateid">Utah</option>
-        <option value="50" name="stateid">Vermont</option>
-        <option value="51" name="stateid">Virginia</option>
-        <option value="53" name="stateid">Washington</option>
-        <option value="54" name="stateid">West Virginia</option>
-        <option value="55" name="stateid">Wisconsin</option>
-        <option value="56" name="stateid">Wyoming</option>
+    <label>Change your State?</label>
+    <select name="stateid">
+        @for (int i = 0; i < 50; i++)
+        {
+            if (ViewBag.StateCodes[i] == ViewBag.UserStateCode)
+            {
+                <option value="@ViewBag.StateCodes[i]" selected>@ViewBag.StateLabels[i]</option>
+            }
+            else
+            {
+                <option value="@ViewBag.StateCodes[i]">@ViewBag.StateLabels[i]</option>
+            }
+
+        }
     </select>
     <label>Change your Income?</label>
     <select name="incomerange">
-        <option name="incomerange" value="DP03_0052E"> Less than $10K
+        @for (int i = 0; i < 10; i++)
+        {
+            if (ViewBag.IncomeCodes[i] == ViewBag.UserIncomeCode)
+            {
+                <option value="@ViewBag.IncomeCodes[i]" selected>@ViewBag.IncomeLabels[i]</option>
+            }
+            else
+            {
+                <option value="@ViewBag.IncomeCodes[i]">@ViewBag.IncomeLabels[i]</option>
+            }
 
-        <option name="incomerange" value="DP03_0053E"> $10,000-$14,999
-
-        <option name="incomerange" value="DP03_0054E"> $15,000-$24,999
-
-        <option name="incomerange" value="DP03_0055E"> $25,000-$34,999
-
-        <option name="incomerange" value="DP03_0056E" checked> $35,000-$49,999
-
-        <option name="incomerange" value="DP03_0057E"> $50,000-$74,999
-
-        <option name="incomerange" value="DP03_0058E"> $75,000-$99,999
-
-        <option name="incomerange" value="DP03_0059E"> $100,000-$149,999
-
-        <option name="incomerange" value="DP03_0060E"> $150,000-$199,999
-
-        <option name="incomerange" value="DP03_0061E"> More than $200K +
+        }
     </select>
     <input type="submit" value="Change!" />
 </form>
