--- a/FinalProject/Views/Home/QuestionsTemp.cshtml
+++ b/FinalProject/Views/Home/QuestionsTemp.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "QuestionsTemp";
+    ViewBag.Title = "Questions";
 }
 <style>
 body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; background-image: url('https://i.pinimg.com/originals/f1/63/11/f16311fd0c32786525f471c685bc516e.gif'); */ background-repeat: no-repeat; background-size: cover; background-position: top; }
