--- a/FinalProject/Views/Home/frontendtemp.cshtml
+++ b/FinalProject/Views/Home/frontendtemp.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "frontendtemp";
+    ViewBag.Title = "Home";
 }
 <style>
 body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; background-image: url('https://i.redd.it/810g0l3sgis01.gif'); */ background-repeat: no-repeat; background-size: cover; background-position: top; }
