--- a/FinalProject/Views/Home/QuestionsTemp.cshtml
+++ b/FinalProject/Views/Home/QuestionsTemp.cshtml
@@ -32,14 +32,14 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
         <input type="text" ([A-Z][a-z]{1,}) name="name" pattern="[a-zA-Z]{0,}\s?[a-zA-z]{1,}'?-?[a-zA-Z]{2,}\s?([a-zA-Z]{1,})?" required />
         <br />
 
-        <h3>Select your Gender</h3>
+        <h3>Select your gender</h3>
 
         <select name="gender">
             <option value="DP05_0003E">Female</option>
             <option value="DP05_0002E">Male</option>
         </select>
 
-        <h3>Select your Age</h3>
+        <h3>Select your age</h3>
         <select name="age">
             <option value="DP05_0008E">18-24</option>
             <option value="DP05_0009E">25-34</option>
@@ -52,7 +52,7 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
             <option value="DP05_0016E">85 and older</option>
         </select>
 
-        <h3>Select your State</h3>
+        <h3>Select your state</h3>
 
         <select name="state">
             <option value="01">Alabama</option>
@@ -110,7 +110,7 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
         @*<h3>Enter your City</h3>
             <input type="text" name="city" pattern="[a-zA-Z]+(?:[ '-][a-zA-Z]+)*" required />*@
 
-        <h3>Select Your Marital Status</h3>
+        <h3>Select your marital status</h3>
         <input type="radio" name="maritalstatus" value="DP02_0010E" checked> Single<br>
         <input type="radio" name="maritalstatus" value="DP02_0004E"> Married<br>
         <input type="radio" name="maritalstatus" value="DP02_0010E">Divorced/Seperated
@@ -138,7 +138,7 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
             <option value="DP02_0065E">Graduate Degree</option>
         </select>
 
-        <h3>Select Your Level of Income</h3>
+        <h3>Select your level of income</h3>
         <input name="incomerange" type="radio" value="DP03_0052E"> Less than $10K
         <br>
         <input name="incomerange" type="radio" value="DP03_0053E"> $10,000-$14,999
@@ -164,7 +164,7 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
         <input type="radio" name="residentialstatus" value="rent"> Rent<br>
         <input type="radio" name="residentialstatus" value="par1"> I live with my parents<br>
         <br />
-        <h3>How much a month do you pay in rent? (0 if you do not rent)</h3>
+        <h3>What is your monthly rent or mortgage? (0 if you do not pay rent)</h3>
         <input type="text" name="grosserent" pattern="^\d+$" value="0" required />
         <br />
         <br />
