--- a/FinalProject/Views/Home/NewIncome.cshtml
+++ b/FinalProject/Views/Home/NewIncome.cshtml
@@ -445,7 +445,7 @@
 <br />
 <br />
 <form action="/Home/NewIncome">
-<<<<<<< HEAD
+
     <label>Change your State?</label>
     <select name="stateid">
         @for (int i = 0; i < 50; i++)
@@ -460,8 +460,8 @@
             }
 
         }
-=======
-    <label>Compare a New State</label>    <select name="stateid">
+
+    @*<label>Compare a New State</label>    <select name="stateid">
         <option value="01" name="stateid">Alabama</option>
         <option value="02" name="stateid">Alaska</option>
         <option value="04" name="stateid">Arizona</option>
@@ -511,8 +511,8 @@
         <option value="53" name="stateid">Washington</option>
         <option value="54" name="stateid">West Virginia</option>
         <option value="55" name="stateid">Wisconsin</option>
-        <option value="56" name="stateid">Wyoming</option>
->>>>>>> text changes, minor error fixes
+        <option value="56" name="stateid">Wyoming</option>*@
+
     </select>
     <label>Change Your Income</label>
     <select name="incomerange">
