--- a/FinalProject/Views/Home/NewState.cshtml
+++ b/FinalProject/Views/Home/NewState.cshtml
@@ -86,7 +86,7 @@
 <h3>@ViewBag.userData.name in @ViewBag.PrevState1[0]</h3>
 
 <table class="table">
-    <tr><th>@ViewBag.userData.name</th><th>Your Info</th><th>Others Like You</th><th>Percentile You're In</th></tr>
+    <tr><th>@ViewBag.userData.name</th><th>Your Info</th><th>Others Like You</th><th>Percent In Your Bracket</th></tr>
     <tr>
         <td>Gender:</td>
         <td>@ViewBag.GenderLabel</td>
