--- a/FinalProject/Views/Home/QuestionsTemp.cshtml
+++ b/FinalProject/Views/Home/QuestionsTemp.cshtml
@@ -164,7 +164,8 @@ body { padding-top: 50px; padding-bottom: 20px; width: 100%; height: 100%; backg
         <input type="radio" name="residentialstatus" value="rent"> Rent<br>
         <input type="radio" name="residentialstatus" value="par1"> I live with my parents<br>
         <br />
-        <h3>What is your monthly rent or mortgage? (0 if you do not pay rent)</h3>
+        <h3>What is your monthly rent or mortgage?</h3>
+        <p>(0 if you do not pay rent/mortgage)</p>
         <input type="text" name="grosserent" pattern="^\d+$" value="0" required />
         <br />
         <br />
